Add functional tests #16 * Added functional tests for WebHome * Added functional tests for modals * Modified code to correct errors found using functional tests